--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": "14.x"
+  },
+  "author": "Reya Wallace",
+  "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
